add japan general

--- a/localisation/japanese/flt_characters_l_japanese.yml
+++ b/localisation/japanese/flt_characters_l_japanese.yml
@@ -157,6 +157,16 @@
 
   jap_yoshio_shinoduka:3 "篠塚義男"
 
+  jap_eitaro_uchiyama:3 "内山英太郎"
+  jap_jou_iimura:3 "飯村穣"
+  jap_yoshio_koduki:3 "上月良夫"
+  jap_tasuku_okada:3 "岡田資"
+  jap_shigenori_kurota:3 "黒田重徳"
+  jap_aketo_nakamura:3 "中村明人"
+  jap_hiroshi_nemoto:3 "根本博"
+  jap_kiichiro_higuchi:3 "樋口季一郎"
+  jap_isami_yokoyama:3 "横山勇"
+
   jap_heisuke_yanagawa:3 "柳川平助"
   jap_kouhei_kashii:3 "香椎浩平"
 
