add japan communist general loc

--- a/localisation/japanese/flt_characters_l_japanese.yml
+++ b/localisation/japanese/flt_characters_l_japanese.yml
@@ -100,6 +100,8 @@
   jap_yoshisuke_ayukawa:3 "鮎川義介"
 
   jap_sanzo_nosaka:3 "野坂参三"
+  jap_hotsumi_ozaki:3 "尾崎秀実"
+
 
   jap_kotohito_kanin:3 "閑院宮載仁親王"
   jap_morimasa_nashimoto:3 "梨本宮守正王"
@@ -167,8 +169,17 @@
   jap_kiichiro_higuchi:3 "樋口季一郎"
   jap_isami_yokoyama:3 "横山勇"
 
+  jap_tsunenori_kaya:3 "賀陽宮恒憲王"
+  jap_haruhito_kanin:3 "閑院宮春仁王"
+
   jap_heisuke_yanagawa:3 "柳川平助"
   jap_kouhei_kashii:3 "香椎浩平"
+
+  jap_sakou_tanemura:3 "種村佐孝"
+  jap_shigeharu_asaeda:3 "朝枝繁春"
+  jap_ryuzo_sejima:3 "瀬島龍三"
+  jap_masaji_shii:3 "志位正二"
+  jap_seiki_asahara:3 "浅原正基"
 
   jap_hiroyasu_fushimi:3 "伏見宮博恭王"
   jap_eisuke_yamamoto:3 "山本英輔"
