--- a/localisation/japanese/flt_traits_l_japanese.yml
+++ b/localisation/japanese/flt_traits_l_japanese.yml
@@ -14,3 +14,4 @@
   the_railway_king:3 "鉄道王"
   defenders_of_parliamentary_politics:3 "議会政治の擁護者"
   the_last_genro:3 "元老"
+  communism_journalist:3 "共産主義の記者"
